--- a/project.config.json
+++ b/project.config.json
@@ -27,7 +27,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.13.0",
-	"appid": "wx2be73982743e0e0d",
+	"appid": "wxd4728d868b084d7a",
 	"projectname": "big_training",
 	"debugOptions": {
 		"hidedInDevtools": []
