匹配对战答题页面

--- a/app.json
+++ b/app.json
@@ -2,7 +2,8 @@
   "pages": [
     "pages/index/index",
     "pages/logs/logs",
-    "pages/matching/index"
+    "pages/matching/index",
+    "pages/fight/index"
   ],
   "window": {
     "backgroundTextStyle": "light",
