对战结果页面

--- a/app.json
+++ b/app.json
@@ -3,7 +3,8 @@
     "pages/index/index",
     "pages/logs/logs",
     "pages/matching/index",
-    "pages/fight/index"
+    "pages/fight/index",
+    "pages/fight_result/index"
   ],
   "window": {
     "backgroundTextStyle": "light",
