--- a/app.json
+++ b/app.json
@@ -1,13 +1,19 @@
 {
-  "pages":[
+  "pages": [
     "pages/index/index",
-    "pages/logs/logs"
+    "pages/logs/logs",
+    "pages/loginType/loginType",
+    "pages/login/login",
+    "pages/ranking/ranking",
+    "pages/adminIndex/adminIndex",
+    "pages/wrongQuestion/wrongQuestion",
+    "pages/record/record"
   ],
-  "window":{
-    "backgroundTextStyle":"light",
+  "window": {
+    "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
     "navigationBarTitleText": "Weixin",
-    "navigationBarTextStyle":"black"
+    "navigationBarTextStyle": "black"
   },
   "style": "v2",
   "sitemapLocation": "sitemap.json"
