--- a/app.json
+++ b/app.json
@@ -17,7 +17,9 @@
     "pages/knowledgeBase/knowledgeBase",
     "pages/knowledgeBase_2/knowledgeBase_2",
     "pages/knowledgeBase_3/knowledgeBase_3",
-    "pages/adminRanking/adminRanking"
+    "pages/adminRanking/adminRanking",
+    "pages/shareGood/shareGood",
+    "pages/shareImg/shareImg"
   ],
   "window": {
     "backgroundTextStyle": "light",
