--- a/project.config.json
+++ b/project.config.json
@@ -137,6 +137,19 @@
           "pathName": "pages/honor/index",
           "query": "type=law",
           "scene": null
+        },
+        {
+          "id": -1,
+          "name": "分享下载图片",
+          "pathName": "pages/shareImg/shareImg",
+          "query": "",
+          "scene": null
+        },
+        {
+          "id": -1,
+          "name": "分享中间页",
+          "pathName": "pages/shareGood/shareGood",
+          "scene": null
         }
       ]
     }
