--- a/project.config.json
+++ b/project.config.json
@@ -149,6 +149,13 @@
           "id": -1,
           "name": "分享中间页",
           "pathName": "pages/shareGood/shareGood",
+          "query": "",
+          "scene": null
+        },
+        {
+          "id": -1,
+          "name": "首页",
+          "pathName": "pages/index/index",
           "scene": null
         }
       ]
