--- a/app.json
+++ b/app.json
@@ -19,7 +19,8 @@
     "pages/knowledgeBase_3/knowledgeBase_3",
     "pages/adminRanking/adminRanking",
     "pages/shareGood/shareGood",
-    "pages/shareImg/shareImg"
+    "pages/shareImg/shareImg",
+    "pages/personal/personal"
   ],
   "window": {
     "backgroundTextStyle": "light",
