--- a/project.config.json
+++ b/project.config.json
@@ -158,6 +158,13 @@
           "pathName": "pages/week_result/index",
           "query": "roomId=1020537529",
           "scene": null
+        },
+        {
+          "id": -1,
+          "name": "个人中心",
+          "pathName": "pages/personal/personal",
+          "query": "userId=1",
+          "scene": null
         }
       ]
     }
