--- a/project.config.json
+++ b/project.config.json
@@ -165,6 +165,13 @@
           "pathName": "pages/personal/personal",
           "query": "userId=1",
           "scene": null
+        },
+        {
+          "id": -1,
+          "name": "点赞页面",
+          "pathName": "pages/shareGood/shareGood",
+          "query": "userId=26",
+          "scene": null
         }
       ]
     }
